@@ -20,6 +20,10 @@
 	* src/core/exmpp_jid.er: Declare a jid() type so that other modules
 	can reference it.
 
+	* src/core/exmpp_stanza.erl: Rename the type jid() to jidlike(). It
+	shouldn't be confused with exmpp_jid:jid(). It still covers jid(),
+	binary() and string().
+
 2009-03-06  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* include/exmpp_xml.hrl: Fix xmldefaultnss() type definition. Add
